data/derived/sp14/progs/unify/prog1660.ml.out
Characters 536-550:
  | _ -> failwith Printf.sprintf  e;;
                  ^^^^^^^^^^^^^^
Error: This expression has type ('a, unit, string) format -> 'a
       but an expression was expected of type string
